--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
-yfinance==0.2.21
-scikit-learn==1.3.0
-joblib==1.3.2
-plotly==5.17.0
-matplotlib==3.7.2
-requests==2.27.0
-timeseries
+streamlit==1.36.0
+pandas==2.2.2
+numpy==2.2.0
+scipy==1.14.1
+scikit-learn==1.5.2
+plotly==5.22.0
+yfinance==0.2.43
 alpha_vantage==2.3.1
-python-dotenv==0.19.2
+requests==2.32.3
+python-dotenv==1.0.1
+joblib==1.4.2
+matplotlib==3.9.2
