--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+# --- core ---
 streamlit==1.36.0
 pandas==2.2.2
-numpy==2.2.0
-scipy==1.14.1
-scikit-learn==1.5.2
+numpy==1.26.4
+scipy==1.11.4
+scikit-learn==1.4.2
 plotly==5.22.0
-requests==2.32.3
+requests==2.31.0
+
+# --- market data ---
 yfinance==0.2.43
 alpha_vantage==2.3.1
-joblib==1.4.2
-matplotlib==3.9.2
+
+# --- misc ---
+joblib==1.3.2
+matplotlib==3.7.2
 python-dotenv==1.0.1
