--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-# --- core ---
 streamlit==1.36.0
 pandas==2.2.2
 numpy==1.26.4
 scipy==1.11.4
-scikit-learn==1.4.2
+scikit-learn==1.4.2       # 1.4.x has wheels for Py 3.11
 plotly==5.22.0
 requests==2.31.0
-
-# --- market data ---
 yfinance==0.2.43
 alpha_vantage==2.3.1
-
-# --- misc ---
 joblib==1.3.2
 matplotlib==3.7.2
 python-dotenv==1.0.1
